5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1642_2723.log
== SUBMITION (2019-06-26 14:36:30) 
-- CODE:
=float(input())
s=input()

ph=72.7*h - 58
pm=62.1*h - 44.7

if (s=='M'):
	print(round(ph,2))
else:
	print(round(pm,2))
-- EXECUTION TIME:
0.761099
-- ERROR:
  File "/home/codebench/codes/1642/2723/main.py", line 1
    =float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:37:45) 
-- CODE:
a=int(input())
b=int(input())
c=int(input())

if (a>b>c) or (a>c>b):
	print(a)
if (b>a>c) or (b>c>a):
	print(b)
if (c>a>b) or (c>b>a):
	print(c)
-- EXECUTION TIME:
0.701076
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
788
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
99
---- user output:
99
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
789
---- user output:
789
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
